Demands for each location

--- a/assets/editor.html
+++ b/assets/editor.html
@@ -47,6 +47,29 @@
 				<div>
 					<label>Name: <input type="text" id="txt-name"/></label>
 				</div>
+
+				<h3>Demand</h3>
+				<div>
+					<label>🌾: <input type="range" min="0" max="2" class="num-demand" name="🌾" list="markers" step="0.1"/></label>
+				</div>
+				<div>
+					<label>🐟: <input type="range" min="0" max="2" class="num-demand" name="🐟" list="markers" step="0.1"/></label>
+				</div>
+				<div>
+					<label>🧀: <input type="range" min="0" max="2" class="num-demand" name="🧀" list="markers" step="0.1"/></label>
+				</div>
+				<div>
+					<label>🧂: <input type="range" min="0" max="2" class="num-demand" name="🧂" list="markers" step="0.1"/></label>
+				</div>
+				<div>
+					<label>🧶: <input type="range" min="0" max="2" class="num-demand" name="🧶" list="markers" step="0.1"/></label>
+				</div>
+				<div>
+					<label>🧱: <input type="range" min="0" max="2" class="num-demand" name="🧱" list="markers" step="0.1"/></label>
+				</div>
+				<datalist id="markers">
+					<option value="1" label="1"></option>
+				</datalist>
 			</div>
 			<div id="div-route" class="hide">
 				<div>
