--- a/assets/editor.html
+++ b/assets/editor.html
@@ -22,6 +22,16 @@
 			.hide{
 				display: none;
 			}
+			#random-mark{
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				writing-mode: vertical-lr;
+				width: 200px;
+			}
+			#num-loctype{
+				width: 200px;
+			}
 		</style>
 		<title>13th Century - Editor</title>
 	</head>
@@ -70,6 +80,18 @@
 				<datalist id="markers">
 					<option value="1" label="1"></option>
 				</datalist>
+				<h3>Random</h3>
+				<div>
+					<input type="range" min="-1" max="1" id="num-loctype" name="loctype" list="random-mark" step="0.1"/>
+					<datalist id="random-mark">
+						<option value="-1" label="Coastal"></option>
+						<option value="0" label=""></option>
+						<option value="1" label="Inland"></option>
+					</datalist>
+				</div>
+				<div>
+					<button id="btn-random">Apply</button>
+				</div>
 			</div>
 			<div id="div-route" class="hide">
 				<div>
