--- a/assets/editor.html
+++ b/assets/editor.html
@@ -95,7 +95,7 @@
 			</div>
 			<div id="div-route" class="hide">
 				<div>
-					<label>Danger: <input type="number" id="num-danger"/></label>
+					<label>Danger: <input type="range" id="num-danger" min="0" max="1" step="0.1"/></label>
 				</div>
 			</div>
 		</div>
